check card is present